<resources>
    <string name="app_name">RecyclingRewardApplication</string>
    <string name="button_login">Login</string>
    <string name="button_sign_in">Sign in</string>
    <string name="header">Recycling Reward Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_login">Login</string>
    <string name="button_login_fragment_login">Login</string>
    <string name="username_text">Username</string>
    <string name="password">Password</string>
    <string name="header_signIn">Sign In</string>
    <string name="username_signIn">Username</string>
    <string name="password_signIn">Password</string>
    <string name="email_signIn">Email</string>
    <string name="phone_signIn">Phone</string>
    <string name="back">Back</string>
    <string name="back_btn_sign_in">Back</string>
    <string name="types_of_garbage">Types of garbage</string>
    <string name="add">Add</string>
    <string name="plastic">Plastic</string>
    <string name="metal_tinplate_aluminium">Metal, Tinplate, Aluminium</string>
    <string name="paper">Paper</string>
    <string name="glass">Glass</string>
    <string name="bio_waste">Bio Waste</string>
    <string name="electrical_electronic_waste">Electrical/Electronic Waste</string>
    <string name="cars">Cars</string>
    <string name="batteries">Batteries</string>
    <string name="general_waste">General Waste</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="recording_form">Recording form</string>
    <string name="log_out">Log out</string>
    <string name="total_points">50</string>
    <string name="remaining_points">0</string>
    <string name="remaining_points_until_next_reward">Remaining points until next reward:</string>
    <string name="total_points_textview">Total points:</string>
    <string name="statistics">Statistics</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_create_an_account">Not registered? Create an account</string>
    <string name="not_registered_click_here_to_sign_in"><![CDATA[<u>Click here to sign in</u>]]></string>
    <string name="recycling_reward_application">Recycling Reward Application</string>
    <string name="avatar_image" />
    <string name="avatarImage">avatar_image</string>
    <string name="sign_In">Sign In</string>
    <string name="login_as_administrator">Login As Adminstrator</string>
    <string name="loginAsAdministrator">Login As Administrator</string>
    <string name="username">Username</string>
    <string name="username_prof">Username</string>
    <string name="aluminium">Aluminium</string>
    <string name="user_s_statistics" />
    <string name="user_statistics">User\'s Statistics</string>
    <string name="recycled_pieces_of_paper">Recycled pieces of paper:</string>
    <string name="____0">0</string>
    <string name="recycled_pieces_of_aluminium">Recycled pieces of aluminium</string>
    <string name="recycled_pieces_of_glass">Recycled pieces of glass:</string>
    <string name="recycled_pieces_of_plastic">Recycled pieces of plastic:</string>
    <string name="keep_recycling">Keep Recycling!</string>
    <string name="recycled_pieces_of_alumnium">Recycled pieces of alumnium:</string>
    <string name="points_left_for_next_reward">Points left for next reward:</string>
    <string name="general_waste_pieces">General Waste (pieces)</string>
    <string name="plastic_pieces">Plastic (pieces)</string>
    <string name="glass_pieces">Glass (pieces)</string>
    <string name="aluminium_pieces">Aluminium (pieces)</string>
    <string name="paper_pieces">Paper (pieces)</string>
    <string name="name_statistics">Name</string>
    <string name="statistics_title">Statistics of</string>
    <string name="total_achievements">Total achievements:</string>
    <string name="best_recyclers">![CDATA[<u>Best Recyclers</u>]]</string>
    <string name="best_plastic_recycler">Best plastic recycler:</string>
    <string name="most_collected_points">Most collected points:</string>
    <string name="most_achievements">Most achievements:</string>
    <string name="best_paper_recycler">Best paper recycler:</string>
    <string name="best_aluminium_recycler">Best aluminium recycler:</string>
    <string name="best_glass_recycler">Best glass recycler:</string>
</resources>