<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_signIn"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_sign_In"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/surname_sign_In"
        app:layout_constraintStart_toStartOf="@+id/surname_sign_In"
        app:layout_constraintTop_toBottomOf="@+id/header_signin" />


    <EditText
        android:id="@+id/surname_sign_In"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/username_signIn"
        app:layout_constraintStart_toStartOf="@+id/username_signIn"
        app:layout_constraintTop_toBottomOf="@+id/name_sign_In" />

    <EditText
        android:id="@+id/username_signIn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/username_signIn"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/password_signIn"
        app:layout_constraintStart_toStartOf="@+id/password_signIn"
        app:layout_constraintTop_toBottomOf="@+id/surname_sign_In" />

    <EditText
        android:id="@+id/password_signIn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/password_signIn"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/email_signIn"
        app:layout_constraintStart_toStartOf="@+id/email_signIn"
        app:layout_constraintTop_toBottomOf="@+id/username_signIn" />

    <EditText
        android:id="@+id/email_signIn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/email_signIn"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/phone_signIn"
        app:layout_constraintStart_toStartOf="@+id/phone_signIn"
        app:layout_constraintTop_toBottomOf="@+id/password_signIn" />

    <EditText
        android:id="@+id/phone_signIn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/phone_signIn"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/button_signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_signIn" />

    <Button
        android:id="@+id/button_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_back_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_back_sign_in" />

    <Button
        android:id="@+id/button_back_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBackButtonClick"
        android:text="@string/back_btn_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_signIn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_signIn" />




</androidx.constraintlayout.widget.ConstraintLayout>